improved AUC score

--- a/machine-failure-prediction.ipynb
+++ b/machine-failure-prediction.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 855,
+   "execution_count": 886,
    "id": "873fd4cb",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 856,
+   "execution_count": 887,
    "id": "c4554193",
    "metadata": {
     "execution": {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 857,
+   "execution_count": 888,
    "id": "1ff91d94",
    "metadata": {
     "execution": {
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 858,
+   "execution_count": 889,
    "id": "85c51423",
    "metadata": {},
    "outputs": [],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 859,
+   "execution_count": 890,
    "id": "6d7164fc",
    "metadata": {
     "execution": {
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 860,
+   "execution_count": 891,
    "id": "dc9d2410",
    "metadata": {
     "execution": {
@@ -195,7 +195,7 @@
        "array(['L', 'M', 'H'], dtype=object)"
       ]
      },
-     "execution_count": 860,
+     "execution_count": 891,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 861,
+   "execution_count": 892,
    "id": "1bad74e4",
    "metadata": {
     "execution": {
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 862,
+   "execution_count": 893,
    "id": "327dca7a",
    "metadata": {
     "execution": {
@@ -283,7 +283,7 @@
        "Text(0.5, 1.0, 'Original')"
       ]
      },
-     "execution_count": 862,
+     "execution_count": 893,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 863,
+   "execution_count": 894,
    "id": "34ded5d5",
    "metadata": {
     "execution": {
@@ -331,7 +331,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 863,
+     "execution_count": 894,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 864,
+   "execution_count": 895,
    "id": "a3b027f7",
    "metadata": {
     "execution": {
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 865,
+   "execution_count": 896,
    "id": "22411916",
    "metadata": {
     "execution": {
@@ -441,7 +441,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 865,
+     "execution_count": 896,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 866,
+   "execution_count": 897,
    "id": "b96f2592",
    "metadata": {
     "execution": {
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 867,
+   "execution_count": 898,
    "id": "62f4a8dc",
    "metadata": {},
    "outputs": [
@@ -527,7 +527,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 867,
+     "execution_count": 898,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 879,
+   "execution_count": 899,
    "id": "fd172cf7",
    "metadata": {},
    "outputs": [
@@ -560,7 +560,7 @@
        " 'RNF']"
       ]
      },
-     "execution_count": 879,
+     "execution_count": 899,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 868,
+   "execution_count": 900,
    "id": "9476aab0",
    "metadata": {},
    "outputs": [
@@ -591,7 +591,7 @@
        " 'RNF']"
       ]
      },
-     "execution_count": 868,
+     "execution_count": 900,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 869,
+   "execution_count": 901,
    "id": "4ea9bd62",
    "metadata": {},
    "outputs": [
@@ -867,7 +867,7 @@
        "[146429 rows x 13 columns]"
       ]
      },
-     "execution_count": 869,
+     "execution_count": 901,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 870,
+   "execution_count": 902,
    "id": "0edef1f5",
    "metadata": {},
    "outputs": [],
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 871,
+   "execution_count": 903,
    "id": "35944ce5",
    "metadata": {
     "execution": {
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 872,
+   "execution_count": 904,
    "id": "f46534e3",
    "metadata": {},
    "outputs": [
@@ -1191,7 +1191,7 @@
        "[146429 rows x 12 columns]"
       ]
      },
-     "execution_count": 872,
+     "execution_count": 904,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1202,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 873,
+   "execution_count": 905,
    "id": "8d810842",
    "metadata": {},
    "outputs": [
@@ -1223,7 +1223,7 @@
        "Name: Machine failure, Length: 146429, dtype: int64"
       ]
      },
-     "execution_count": 873,
+     "execution_count": 905,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1234,14 +1234,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 880,
+   "execution_count": 906,
    "id": "31dc78ed",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "85a3260f0fae4b3696083921db627864",
+       "model_id": "5a2821469b3646178fdeeec6782e07ec",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1255,10 +1255,10 @@
     {
      "data": {
       "text/plain": [
-       "<catboost.core.CatBoostClassifier at 0x1fe07e584f0>"
+       "<catboost.core.CatBoostClassifier at 0x1fe0eeefeb0>"
       ]
      },
-     "execution_count": 880,
+     "execution_count": 906,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1280,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 881,
+   "execution_count": 907,
    "id": "c4bec150",
    "metadata": {
     "execution": {
@@ -1300,14 +1300,13 @@
    },
    "outputs": [],
    "source": [
-    "test=test.to_numpy()\n",
-    "test_pool = Pool(test, feature_names=feature_names, cat_features = ['Product ID', 'Type'])\n",
-    "pred = model.predict(test_pool)"
+    "test_pool = Pool(test.to_numpy(), feature_names=feature_names, cat_features = ['Product ID', 'Type'])\n",
+    "pred = model.predict_proba(test_pool)[:,1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 882,
+   "execution_count": 908,
    "id": "af2d51fe",
    "metadata": {},
    "outputs": [
@@ -1325,7 +1324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 883,
+   "execution_count": 909,
    "id": "d19f82cd",
    "metadata": {
     "execution": {
@@ -1375,23 +1374,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>136429</th>\n",
-       "      <td>0</td>\n",
+       "      <td>0.000792</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>136430</th>\n",
-       "      <td>0</td>\n",
+       "      <td>0.000780</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>136431</th>\n",
-       "      <td>0</td>\n",
+       "      <td>0.000519</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>136432</th>\n",
-       "      <td>0</td>\n",
+       "      <td>0.001142</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>136433</th>\n",
-       "      <td>0</td>\n",
+       "      <td>0.000504</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1399,23 +1398,23 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>227378</th>\n",
-       "      <td>0</td>\n",
+       "      <td>0.000948</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>227379</th>\n",
-       "      <td>0</td>\n",
+       "      <td>0.002038</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>227380</th>\n",
-       "      <td>0</td>\n",
+       "      <td>0.000823</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>227381</th>\n",
-       "      <td>0</td>\n",
+       "      <td>0.005143</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>227382</th>\n",
-       "      <td>0</td>\n",
+       "      <td>0.000522</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1425,22 +1424,22 @@
       "text/plain": [
        "        Machine failure\n",
        "id                     \n",
-       "136429                0\n",
-       "136430                0\n",
-       "136431                0\n",
-       "136432                0\n",
-       "136433                0\n",
+       "136429         0.000792\n",
+       "136430         0.000780\n",
+       "136431         0.000519\n",
+       "136432         0.001142\n",
+       "136433         0.000504\n",
        "...                 ...\n",
-       "227378                0\n",
-       "227379                0\n",
-       "227380                0\n",
-       "227381                0\n",
-       "227382                0\n",
+       "227378         0.000948\n",
+       "227379         0.002038\n",
+       "227380         0.000823\n",
+       "227381         0.005143\n",
+       "227382         0.000522\n",
        "\n",
        "[90954 rows x 1 columns]"
       ]
      },
-     "execution_count": 883,
+     "execution_count": 909,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1456,18 +1455,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 884,
+   "execution_count": 910,
    "id": "9eec7c7e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Machine failure    1134\n",
-       "dtype: int64"
+       "Machine failure    0.0\n",
+       "dtype: float64"
       ]
      },
-     "execution_count": 884,
+     "execution_count": 910,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1478,7 +1477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 885,
+   "execution_count": 911,
    "id": "2c2db73c",
    "metadata": {
     "execution": {
