accuracy improved upto 99.97%

--- a/0-97718-catboost-machine-failure-prediction.ipynb
+++ b/0-97718-catboost-machine-failure-prediction.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 116,
    "id": "1b9612fb",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
@@ -46,12 +46,13 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from catboost import Pool,CatBoostClassifier\n",
-    "from sklearn.metrics import roc_auc_score as AUC"
+    "from sklearn.metrics import roc_auc_score as AUC\n",
+    "import optuna"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 117,
    "id": "8b8255ed",
    "metadata": {
     "execution": {
@@ -78,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 118,
    "id": "47b73b0b",
    "metadata": {
     "execution": {
@@ -103,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 119,
    "id": "796bf319",
    "metadata": {
     "execution": {
@@ -147,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 120,
    "id": "cb01fe29",
    "metadata": {
     "execution": {
@@ -199,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 121,
    "id": "5e222342",
    "metadata": {
     "execution": {
@@ -224,7 +225,7 @@
        "array(['L', 'M', 'H'], dtype=object)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 122,
    "id": "434378a5",
    "metadata": {
     "execution": {
@@ -287,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 123,
    "id": "c75f4734",
    "metadata": {
     "execution": {
@@ -312,7 +313,7 @@
        "Text(0.5, 1.0, 'Original')"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -335,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 124,
    "id": "e415c88c",
    "metadata": {
     "execution": {
@@ -360,7 +361,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -400,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 125,
    "id": "547c3e62",
    "metadata": {
     "execution": {
@@ -453,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 126,
    "id": "8ca349aa",
    "metadata": {
     "execution": {
@@ -478,7 +479,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -517,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 127,
    "id": "87b3ac04",
    "metadata": {
     "execution": {
@@ -555,7 +556,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 128,
    "id": "7c574ba3",
    "metadata": {
     "execution": {
@@ -603,7 +604,7 @@
        " 'RNF']"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 129,
    "id": "74fd0720",
    "metadata": {
     "execution": {
@@ -649,7 +650,7 @@
        " 'RNF']"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 130,
    "id": "3698a18c",
    "metadata": {
     "execution": {
@@ -940,7 +941,7 @@
        "[146429 rows x 13 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -968,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 131,
    "id": "09f8ccd1",
    "metadata": {
     "execution": {
@@ -994,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 132,
    "id": "661bba3c",
    "metadata": {
     "execution": {
@@ -1262,7 +1263,7 @@
        "[146429 rows x 12 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1273,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 133,
    "id": "ceacd26c",
    "metadata": {
     "execution": {
@@ -1309,7 +1310,7 @@
        "Name: Machine failure, Length: 146429, dtype: int64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1320,7 +1321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 134,
    "id": "9f86765e",
    "metadata": {
     "execution": {
@@ -1342,7 +1343,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "861375c6fc764cf2891a17cbec6d536f",
+       "model_id": "23b215564b9744bb81c1a7fe7ced94fd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1356,22 +1357,16 @@
     {
      "data": {
       "text/plain": [
-       "<catboost.core.CatBoostClassifier at 0x16266f51930>"
+       "<catboost.core.CatBoostClassifier at 0x16265fdd870>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "params = {'loss_function': 'Logloss',\n",
-    "          'eval_metric': 'AUC',\n",
-    "          'random_seed': 19970507,\n",
-    "          'learning_rate': 0.027, \n",
-    "          'iterations': 1500, \n",
-    "          'depth': 5, \n",
-    "          'subsample': 0.705}\n",
+    "params ={'loss_function': 'Logloss','eval_metric': 'AUC','random_seed': 19970507,'learning_rate': 0.2373428829418096, 'iterations': 2000, 'depth': 6, 'subsample': 0.5227705614428807}\n",
     "feature_names = ['Product ID','Type','Air temperature [K]','Process temperature [K]',\n",
     "                 'Rotational speed [rpm]','Torque [Nm]','Tool wear [min]','TWF','HDF','PWF','OSF','RNF']\n",
     "train_pool = Pool(X.to_numpy(), Y.to_numpy(), feature_names = feature_names, cat_features = ['Product ID', 'Type'])\n",
@@ -1381,7 +1376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 135,
    "id": "7bbc68d9",
    "metadata": {
     "execution": {
@@ -1407,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 136,
    "id": "a7be2745",
    "metadata": {
     "execution": {
@@ -1430,7 +1425,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Score: 0.9108500312000193\n"
+      "Train Score: 0.9437832729135522\n"
      ]
     }
    ],
@@ -1440,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 137,
    "id": "81a62186",
    "metadata": {
     "execution": {
@@ -1490,23 +1485,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>136429</th>\n",
-       "      <td>0.000654</td>\n",
+       "      <td>0.000522</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>136430</th>\n",
-       "      <td>0.000872</td>\n",
+       "      <td>0.000047</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>136431</th>\n",
-       "      <td>0.000409</td>\n",
+       "      <td>0.000041</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>136432</th>\n",
-       "      <td>0.001123</td>\n",
+       "      <td>0.000586</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>136433</th>\n",
-       "      <td>0.000508</td>\n",
+       "      <td>0.000056</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1514,23 +1509,23 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>227378</th>\n",
-       "      <td>0.000765</td>\n",
+       "      <td>0.000378</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>227379</th>\n",
-       "      <td>0.002371</td>\n",
+       "      <td>0.003140</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>227380</th>\n",
-       "      <td>0.000698</td>\n",
+       "      <td>0.000002</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>227381</th>\n",
-       "      <td>0.003972</td>\n",
+       "      <td>0.000846</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>227382</th>\n",
-       "      <td>0.000473</td>\n",
+       "      <td>0.000154</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1540,22 +1535,22 @@
       "text/plain": [
        "        Machine failure\n",
        "id                     \n",
-       "136429         0.000654\n",
-       "136430         0.000872\n",
-       "136431         0.000409\n",
-       "136432         0.001123\n",
-       "136433         0.000508\n",
+       "136429         0.000522\n",
+       "136430         0.000047\n",
+       "136431         0.000041\n",
+       "136432         0.000586\n",
+       "136433         0.000056\n",
        "...                 ...\n",
-       "227378         0.000765\n",
-       "227379         0.002371\n",
-       "227380         0.000698\n",
-       "227381         0.003972\n",
-       "227382         0.000473\n",
+       "227378         0.000378\n",
+       "227379         0.003140\n",
+       "227380         0.000002\n",
+       "227381         0.000846\n",
+       "227382         0.000154\n",
        "\n",
        "[90954 rows x 1 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1571,7 +1566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 138,
    "id": "82bc8736",
    "metadata": {
     "execution": {
